@@ -1,3 +1,8 @@
+2003-05-30  Dennis Cranston <dennis_cranston at yahoo com>
+
+	* actions.c, info.c, log_repaint.c, logrtns.c, logview.c,
+	monitor.c:  Various compiler warning fixes.
+
 2003-05-19  Christian Neumair  <chris@gnome-de.org>
 
 	* about.c: Don't mark copyright string for translation, added
